# fastapi_basic_app

./: alembic.ini  database.py  main.py  pyproject.toml  seed.py
domain/account/: accoun_router.py  account_repository.py  account_service.py  exceptions.py  models.py  schemas.py
domain/core/: exception_handler.py  exceptions.py  settings.py  utils.py
domain/post/: exceptions.py  models.py  post_repository.py  post_router.py  post_service.py  schemas.py
migrations/: env.py
migrations/versions/: ba1b5bfdd8d7_initialize.py
